Fix computed style for relative offsets when they're specified in |ch| units. Bug 391034, r+sr+a=dbaron